GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha25 :
    
        - added new "description" field to printers in both
          PostgreSQL and LDAP. No code to handle this yet.
          
        - reversed the fix for power save mode in printers :  
          no paper or tray open would have caused people to
          be undercharged.
          
    - 1.19alpha24 :
    
        - Native PDF parsing code now works perfectly with
          Python 2.1 and above, and is way faster than before.
          GhostScript is not used anymore to convert PDF to PS,
          because PDF is parsed directly.
          
    - 1.19alpha23 :
    
        - Fixed waitprinter.sh wrt PowerSave mode and some
          printers. Thanks to Ryan Suarez.
        
        - Smart PDL analyzer now recognizes PDF too : two
          PDF parsing methods are used : a native one which
          is very fast but requires Python 2.3 or above, and
          a slower one which uses Ghostscript. PyKota detects
          automatically which method to use depending on your
          version of Python.
        
        - All tracebacks now include PyKota's version number.
          
    - 1.19alpha22 :
    
        - Ensures that the file pointer for job's data is 
          reset to the start of the job's datas after the
          job's size pre-computation phase.
          
        - Improved PostScript detection code for bad drivers
          which don't correctly switch languages between PJL
          and PS.
       
        - Even better debugging code.
        
    - 1.19alpha21 :
    
        - Additionnal check.
        
    - 1.19alpha20 :
    
        - More complete logging messages wrt accounters.
        